# HPC_Project2

./: CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
include/: common.h  fs_utils.h  matrix_hist.h  output_utils.h  string_list.h
scripts/: entrypoint.sh  run_cluster_job.sh
src/: fs_utils.c  generate_matrices.c  matrix_hist.c  mpi_histogram.c  output_utils.c  string_list.c
tools/: plot_histograms.py
